[package]
name = "rust_hft"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dashmap = "5.4"
ordered-float = "3.0"
rand = { version = "0.8", features = ["std_rng"] }

[dev-dependencies]
criterion = "0.4"
mockall = "0.11"

#[[bench]]
#name = "order_book_benchmark"
#harness = false
